# libc

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  .project-history-dir  BuildOptions.cmake  CMakeLists.txt  Jenkinsfile  LICENSE  Makefile  Makefile-cmake  Packaging.cmake  README.md  cppcheck.xml  meson.build  meson.options  meson_options.txt  premake5.lua
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: codeql-buildscript.sh
arch/: meson.build
arch/aarch64/: CMakeLists.txt  meson.build
arch/aarch64/include/: _endian.h
arch/aarch64/include/_types/: _float.h  _int16_t.h  _int32_t.h  _int64_t.h  _intmax_t.h  _intptr_t.h  _setjmp.h  _size_t.h  _time_t.h  _uint16_t.h  _uint64_t.h  _uint8_t.h  _uintmax_t.h  _wchar_t.h
arch/aarch64/src/: __aeabi_atexit.c  crt0.S
arch/arm/: meson.build
arch/arm/include/: _endian.h  _limits.h
arch/arm/include/_types/: _float.h  _int16_t.h  _int32_t.h  _int64_t.h  _intmax_t.h  _intptr_t.h  _ptrdiff_t.h  _setjmp.h  _size_t.h  _time_t.h  _uintmax_t.h  _uintptr_t.h  _wint_t.h
arch/arm/src/: __aeabi_atexit.c  crt0.S  crt0.s
arch/x86/: meson.build
arch/x86/include/: _endian.h  _limits.h
arch/x86/include/_types/: _float.h  _intmax_t.h  _setjmp.h  _time_t.h  _uintmax_t.h  _wchar_t.h  _wint_t.h
arch/x86/libc/: rand.c
arch/x86_64/: CMakeLists.txt  meson.build
arch/x86_64/include/: _endian.h  _limits.h
arch/x86_64/include/_types/: _float.h  _int16_t.h  _int32_t.h  _int64_t.h  _int8_t.h  _intmax_t.h  _ptrdiff_t.h  _setjmp.h  _time_t.h  _uint32_t.h  _uint64_t.h  _uintptr_t.h  _wchar_t.h  _wint_t.h
arch/x86_64/libc/: rand.c
cmake/: .gitattributes  .gitignore  .gitmodules  Conversions.cmake  LICENSE  README.md
cmake/analysis/: CodeCoverage.cmake  clang-tidy.cmake  clang-tidy.sh  complexity.cmake  coverage.cmake  cppcheck.cmake  sanitizers.cmake  sloccount.cmake  vale.cmake
cmake/compiler/: CheckAndApplyFlags.cmake  DefaultCompilerSettings.cmake
cmake/documentation/: Doxyfile.in  doxygen.cmake
cmake/format/: clang-format.cmake  (+1 more)
docs/: CI.jenkinsfile  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile  ISSUE_TEMPLATE.md  Jenkinsfile  LICENSES.md  PULL_REQUEST_TEMPLATE.md  software_inventory.xlsx
include/: assert.h  complex.h  crt.h  ctype.h  errno.h  float.h  inttypes.h  langinfo.h  limits.h  locale.h  math.h  memory.h  nl_types.h  printf.h  setjmp.h  stdarg.h  stdbool.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  strings.h  time.h  wchar.h  wctype.h
openlibm/: .gitignore  .travis.yml  Make.inc  Makefile  README.md  appveyor.yml  openlibm.pc.in
src/: CMakeLists.txt  meson.build
src/assert/: assert.c
src/crt/: _Exit.c  __dso_handle.h  abort.c  at_exit.c  crt.c  crtbegin.c  crtend.c  cxa_atexit.c  exit.c  quick_exit.c  stack_protection.c
src/ctype/: toascii.c  tolower.c  toupper.c
src/errno/: __strerror.h  strerror.c
src/exit/: _Exit.c  abort.c  at_quick_exit.c  exit.h  quick_exit.c
src/gdtoa/: .clang-format  .gitignore  .gitmodules  Makefile  README.md  premake5.lua
src/gdtoa/automake/: Makefile.am  configure.ac
src/gdtoa/docs/: PULL_REQUEST_TEMPLATE_CCC.md
src/gdtoa/docs/architecture/decisions/: 0001-record-architecture-decisions.md
src/gdtoa/include/: arith.h  gd_qnan.h  gdtoa.h  gdtoaimp.h
src/gdtoa/src/: arithchk.c  dmisc.c  dtoa.c  g_Qfmt.c  g__fmt.c  g_ddfmt.c  g_dfmt.c  g_ffmt.c  g_xLfmt.c  g_xfmt.c  gdtoa.c  gethex.c  gmisc.c  hd_init.c  hexnan.c  misc.c  qnan.c  smisc.c  strtoIQ.c  strtoId.c  strtoIdd.c  strtoIf.c  strtoIg.c  strtoIx.c  strtoIxL.c  strtod.c  strtodI.c  strtodg.c  strtodnrp.c  strtof.c  strtopQ.c  strtopd.c  strtopdd.c  strtopf.c  strtopx.c  strtopxL.c  strtorQ.c  strtord.c  strtordd.c  strtorf.c  (+4 more)
src/gdtoa/tools/: CI.jenkinsfile  Jenkinsfile
src/gdtoa/tools/format/: README.md  clang-format-all.sh  clang-format-dir.sh  clang-format-files.sh  clang-format-git-diff.sh  clang-format-patch.sh  setup.sh
src/locale/: langinfo.c
src/math/: fabs.c  fabsf.c
src/stdio/: asprintf.c  printf.c  putchar.c  putchar_native.c  puts.c  vasprintf.c
src/stdlib/: atoi.c  atol.c  atoll.c  bsearch.c  heapsort.c  heapsort_r.c  imaxabs.c  imaxdiv.c  qsort.c  rand.c  strtod.c  strtol.c  strtold.c  strtoll.c  strtoul.c  strtoull.c
src/string/: __strerror.h  memchr.c  memcmp.c  memcpy.c  memmem.c  memmove.c  memrchr.c  memset.c  strchrnul.c  strchrnul.h  strcmp.c  strcoll.c  strcpy.c  strcspn.c  strdup.c  strerror.c  strerror_r.c  strlen.c  strncmp.c  strncpy.c  strndup.c  strnlen.c  strnstr.c  strpbrk.c  strrchr.c  strspn.c  strstr.c  strtok.c  strxfrm.c
src/support/: fls.c  flsl.c  flsll.c
src/time/: asctime.c  asctime_r.c
src/wchar/: _towcase.h  iswalnum.c  iswalpha.c  iswblank.c  iswcntrl.c  iswctype.c  iswdigit.c  iswprint.c  iswpunct.c  iswspace.c  iswxdigit.c  towccase.c  towctrans.c  towlower.c  towupper.c  wcswidth.c  wctrans.c  wctype.c  wcwidth.c  wide.h
subprojects/: cmocka.wrap
test/: CMakeLists.txt  README.md  fdgdgdfg.c  includes.c  main.c  meson.build  tests.h
test/app/: main.c  stackcheck_main.c
test/crt/: crt_init_array.c  crt_tests.c  crt_tests.h
test/ctype/: ctype_tests.c  ctype_tests.h  isalnum.c  isalpha.c  isascii.c  isblank.c  iscntrl.c  isdigit.c  isgraph.c  islower.c  isprint.c  ispunct.c  isspace.c  isupper.c  isxdigit.c  toascii.c  tolower.c  toupper.c
test/stdlib/: abs.c  atof.c  atoi.c  atol.c  atoll.c  bsearch.c  calloc.c  div.c  heapsort.c  heapsort_r.c  imaxabs.c  imaxdiv.c  labs.c  ldiv.c  llabs.c  lldiv.c  qsort.c  qsort_r.c  rand.c  realloc.c  stdlib_tests.c  stdlib_tests.h  strtod.c  strtof.c  strtol.c  strtoll.c  strtoul.c  strtoull.c
test/string/: memcmp.c  memcpy.c  memmem.c  memmove.c  memset.c  strcat.c  strchr.c  strcmp.c  strcpy.c  strdup.c  string_tests.c  string_tests.h  strlen.c  strncat.c  strncmp.c  strncpy.c  strndup.c  strnlen.c  strnstr.c  strrchr.c  strstr.c  strtok.c
test/test/: rand.c  test.h  ulpsDistance.c  ulpsDistance.h
tools/: CI.jenkinsfile  Jenkinsfile  clang-format-libc.sh  clang-format-patch-libc.sh  clear_test_xml.sh  complexity_check.sh  cppcheck_xml.sh
(+225 files in other folders)
