option('hide-unimplemented-libc-apis', type: 'boolean', value: false,
    description: 'Make unimplemented libc functions invisible to the compiler.',
    yield: true)
option('enable-gnu-extensions', type: 'boolean', value: false,
    description: 'Enable GNU libc extensions.',
    yield: true)
option('disable-builtins', type: 'boolean', value: true,
    description: 'Tell the compiler not to generate builtin functions.',
    yield: true)
option('stack-canary-value', type: 'string', value: '',
    description: 'Override the default canary value. Supply a hexadecimal value, such as 0xdeadbeef. The canary length should match the word size of your processor.',
    yield: true)
option('disable-stack-protection', type: 'boolean', value: false,
    description: 'Tell the compiler not to insert stack protection calls.', yield: true)
option('disable-stk-guard-runtime-config', type: 'boolean', value: false,
    description: 'Disables runtime configuration option for __stack_chk_guard. The program will use a fixed value.', yield: true)
option('enable-pedantic', type: 'boolean', value: false, yield: true)
option('enable-pedantic-error', type: 'boolean', value: false, yield: true)
option('enable-testing', type: 'boolean', value: true, yield: true, description: 'Control whether libc test targets will be enabled.')
